--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <title>TEN-X</title>
 </head>
 <body>
-  <header id="header">
-    <img src="image/tenXLogo.png" alt="Ten-x Logo">
-    <img src="image/tubeIcon.png" alt="Tube icon">
-    <span class="contact-number">
-      +71 88 569 6822
-    </span>
+  <header id="header" class="content">
+    <div class="logo-and-contacts">
+      <a href="#"><img src="image/tenXLogo.png" alt="Ten-x Logo"></a>
+      <div class="contacts">
+        <img src="image/tubeIcon.png" alt="Tube icon">
+        <span class="contact-number">+71 88 569 6822</span>
+      </div>
+    </div>
     <nav class="navigation">
       <ul class="nav-block">
         <li><a href="#">ABOUT</a></li>
