Add main, gallery, uppgrade styles

--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <div class="gallery">
+      <div class="content">
+        <figure>
+          <img src="image/10XImage.png" alt="10X image">
+          <button class="button-gallery"></button>
+        </figure>
+        <span>YOUR PRESENCE</span>
+        <ul class="nav-gallery">
+          <li class="circle active"></li>
+          <li class="circle"></li>
+          <li class="circle"></li>
+          <li class="circle"></li>
+        </ul>
+      </div>
+    </div>
+  </main>
 </body>
 <script src="main.js"></script>
 </html>
