Upgrade main, add music player

--- a/index.html
+++ b/index.html
@@ -32,18 +32,47 @@
   <main>
     <div class="gallery">
       <div class="content">
-        <figure>
-          <img src="image/10XImage.png" alt="10X image">
+        <div class="gallery-images">
+          <figure>
+            <ul class="images">
+              <li class="active">
+                <img src="image/10XImage.png" alt="10X image">
+              </li>
+              <li>
+                <img src="#" alt="Image">
+              </li>
+              <li>
+                <img src="#" alt="Image">
+              </li>
+              <li>
+                <img src="#" alt="Image">
+              </li>
+            </ul>
+            <figcaption>
+              <span>YOUR PRESENCE</span>
+            </figcaption>
+          </figure>
           <button class="button-gallery"></button>
-        </figure>
-        <span>YOUR PRESENCE</span>
+        </div>
         <ul class="nav-gallery">
-          <li class="circle active"></li>
-          <li class="circle"></li>
-          <li class="circle"></li>
-          <li class="circle"></li>
+          <li class="circle active"><span class="border"></span></li>
+          <li class="circle"><span></span></li>
+          <li class="circle"><span></span></li>
+          <li class="circle"><span></span></li>
         </ul>
       </div>
+    </div>
+    <div class="music-player">
+      <article class="content">
+        <div class="player">
+          <img src="image/audioPlayer.png" alt="Audio player">
+          <button><img src="image/playButton.png" alt="play button"></button>
+        </div>
+        <h1>
+          We're a designer & a developer who love building cool stuff with our clients.
+        </h1>
+        <img src="image/painting.png" alt="Painting">
+      </article>
     </div>
   </main>
 </body>
