--- a/index.html
+++ b/index.html
@@ -74,6 +74,25 @@
         <img src="image/painting.png" alt="Painting">
       </article>
     </div>
+    <div class="strategy">
+      <div class="content">
+        <figure>
+          <img src="image/productImage.png" alt="Product image">
+          <figcaption>
+            <time>01<mark>/05</mark></time>
+          </figcaption>
+        </figure>
+        <article>
+          <h1>
+            Strategy & Creative<br>We design and build digital products,<br>and services we believe in.
+          </h1>
+          <p>
+            Strategy is not something you can retrospectively apply in order to make irrelevant ideas seem coherent strategists start out with a clear approach to ensure our creative proposal will match your business needs. 
+          </p>
+          <a href="#">LEARN MORE</a>
+        </article>
+      </div>
+    </div>
   </main>
 </body>
 <script src="main.js"></script>
