Add company-offer block

--- a/index.html
+++ b/index.html
@@ -93,6 +93,25 @@
         </article>
       </div>
     </div>
+    <div class="company-offer">
+      <div class="content">
+        <article>
+          <h1>
+            We are bunch of super-skilled<br>guys and gals who love<br>to create websites.
+          </h1>
+          <p>
+            Filema Rodion proposes individual, airtight packages that keep the product's characteristics unchanged for treats for the marriage, baptism and every social event.
+          </p>
+          <a href="#">LEARN MORE</a>
+        </article>
+        <figure>
+          <img src="image/productImageTwo.png" alt="Product image">
+          <figcaption>
+            <time>02<mark>/05</mark></time>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
   </main>
 </body>
 <script src="main.js"></script>
