Upgrade portfolio block

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
       <div class="content">
         <h1>SELECTED PROJECTS</h1>
         <ul>
-          <li class="end-of-thino">
-            <figure>
+          <li class="end-of-thino clicked-element">
+            <figure class="active">
               <img src="image/portfolioImages/vacuumCleaner.png" alt="Vacuum cleaner">
               <figcaption>
                 <h2>End of Thino</h2>
@@ -126,7 +126,8 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="">SHOP NOW</a>
+            <a href="#" class="active-button"></a>
+            <a href="#">SHOP NOW</a>
           </li>
           <li class="het-boerenveensche">
             <figure>
@@ -138,7 +139,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="">SHOP NOW</a>
+            <a href="#">SHOP NOW</a>
           </li>
           <li class="bluerocket">
             <figure>
@@ -150,7 +151,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="">SHOP NOW</a>
+            <a href="#">SHOP NOW</a>
           </li>
           <li class="harmony-poliform">
             <figure>
@@ -162,7 +163,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="">SHOP NOW</a>
+            <a href="#">SHOP NOW</a>
           </li>
           <li class="rowenta-studiodry">
             <figure>
@@ -174,7 +175,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="">SHOP NOW</a>
+            <a href="#">SHOP NOW</a>
           </li>
           <li class="fritsch-durisotti">
             <figure>
@@ -186,7 +187,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="">SHOP NOW</a>
+            <a href="#">SHOP NOW</a>
           </li>
         </ul>
       </div>
