Add services block

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <button class="button-gallery"></button>
         </div>
         <ul class="nav-gallery">
-          <li class="circle active"><span class="border"></span></li>
+          <li class="circle active-circle"><span class="border"></span></li>
           <li class="circle"><span></span></li>
           <li class="circle"><span></span></li>
           <li class="circle"><span></span></li>
@@ -190,6 +190,51 @@
             <a href="#">SHOP NOW</a>
           </li>
         </ul>
+      </div>
+    </div>
+    <div class="services">
+      <div class="content">
+        <article>
+          <strong>SERVICES WE SPECIALIZE IN</strong>
+          <h1>Expert input for maximum growth.</h1>
+          <strong class="text-content">DIGITAL / DIGITAL / MARKETING / ECOMMERCE / BRANDING</strong>
+          <a href="#">VIEW PRICING DETAILS</a>
+        </article>
+        <ul class="list-of-services">
+          <li class="active">
+            <img src="image/agilityImage.png" alt="Agility">
+            <h2>Agility</h2>
+            <p>
+              We believe in a seamless client partnership that<br>connects us into a single unified team. We're not only<br>agile in code but in discovery, and design.
+            </p>
+          </li>
+          <li>
+            <img src="image/teamImage.png" alt="Team">
+            <h2>Team</h2>
+            <p>
+              Our dedicated team model ensures that every project<br>receives the meticulous attention and resource it<br>deserves from our Strategists, Designers, Producers,<br>Engineers, & Filmmakers.
+            </p>
+          </li>
+          <li>
+            <img src="image/collaborationImage.png" alt="Collaboration">
+            <h2>Collaboration</h2>
+            <p>
+              Nothing we do is in isolation. Our process is<br>extremely collaborative, leveraging our clients<br>unique perspectives to activate our own expertise.
+            </p>
+          </li>
+        </ul>
+        <ul class="nav-gallery">
+          <li class="circle active-circle"><span class="border"></span></li>
+          <li class="circle"><span></span></li>
+          <li class="circle"><span></span></li>
+          <li class="circle"><span></span></li>
+        </ul>
+        <div class="contact">
+          <span>
+            If you'd like to get in touch,<br> you can send ud an email directly at
+            <address>hello@10x.com</address>
+          </span>
+        </div>
       </div>
     </div>
   </main>
