--- a/index.html
+++ b/index.html
@@ -238,6 +238,23 @@
       </div>
     </div>
   </main>
+  <footer id="footer" class="content">
+    <a href="#" class="logo"><img src="image/tenXLogo.png" alt="Ten-x logo"></a>
+    <nav>
+      <ul class="nav-block">
+        <li><a href="#" class="active">ABOUT</a>/</li>
+        <li><a href="#">PROJECTS</a>/</li>
+        <li><a href="#">BLOG</a>/</li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+      <ul class="social-networks">
+        <li><a href="#" class="twitter">Twitter</a></li>
+        <li><a href="#" class="instagram">Instagram</a></li>
+        <li><a href="#" class="facebook">Facebook</a></li>
+        <li><a href="#" class="behance">Behance</a></li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 <script src="main.js"></script>
 </html>
