--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <nav class="navigation">
       <ul class="nav-block">
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="#" class="active">ABOUT</a></li>
         <li><a href="#">PROJECTS</a></li>
         <li><a href="#">BLOG</a></li>
         <li><a href="#">CONTACT</a></li>
