--- a/index.html
+++ b/index.html
@@ -33,25 +33,40 @@
     <div class="gallery">
       <div class="content">
         <div class="gallery-images">
-          <figure>
-            <ul class="images">
-              <li class="active">
-                <img src="image/10XImage.png" alt="10X image">
-              </li>
-              <li>
+          <ul id="images">
+            <li class="active">
+              <figure>
+                <img src="image/10XImage.png" alt="10X image" class="active-image">
+                <figcaption>
+                  <span class="active">YOUR PRESENCE</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
                 <img src="#" alt="Image">
-              </li>
-              <li>
+                <figcaption>
+                  <span>YOUR PRESENCE</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
                 <img src="#" alt="Image">
-              </li>
-              <li>
+                <figcaption>
+                  <span>YOUR PRESENCE</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
                 <img src="#" alt="Image">
-              </li>
-            </ul>
-            <figcaption>
-              <span>YOUR PRESENCE</span>
-            </figcaption>
-          </figure>
+                <figcaption>
+                  <span>YOUR PRESENCE</span>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
           <button class="button-gallery"></button>
         </div>
         <ul class="nav-gallery">
@@ -201,7 +216,7 @@
           <a href="#">VIEW PRICING DETAILS</a>
         </article>
         <ul class="list-of-services">
-          <li class="active">
+          <li>
             <img src="image/agilityImage.png" alt="Agility">
             <h2>Agility</h2>
             <p>
