--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       <div class="content">
         <h1>SELECTED PROJECTS</h1>
         <ul>
-          <li class="end-of-thino clicked-element">
-            <figure class="active">
+          <li class="end-of-thino">
+            <figure>
               <img src="image/portfolioImages/vacuumCleaner.png" alt="Vacuum cleaner">
               <figcaption>
                 <h2>End of Thino</h2>
@@ -141,8 +141,8 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#" class="active-button"></a>
-            <a href="#">SHOP NOW</a>
+            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="het-boerenveensche">
             <figure>
@@ -154,7 +154,8 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#">SHOP NOW</a>
+            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="bluerocket">
             <figure>
@@ -166,7 +167,8 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#">SHOP NOW</a>
+            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="harmony-poliform">
             <figure>
@@ -178,7 +180,8 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#">SHOP NOW</a>
+            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="rowenta-studiodry">
             <figure>
@@ -190,7 +193,8 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#">SHOP NOW</a>
+            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="fritsch-durisotti">
             <figure>
@@ -202,7 +206,8 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#">SHOP NOW</a>
+            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="button">SHOP NOW</a>
           </li>
         </ul>
       </div>
