Upgrade main.js

--- a/index.html
+++ b/index.html
@@ -36,15 +36,7 @@
           <ul id="images">
             <li class="active">
               <figure>
-                <img src="image/10XImage.png" alt="10X image" class="active-image">
-                <figcaption>
-                  <span class="active">YOUR PRESENCE</span>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <img src="#" alt="Image">
+                <img src="image/10XImage.png" alt="10X image">
                 <figcaption>
                   <span>YOUR PRESENCE</span>
                 </figcaption>
@@ -52,22 +44,31 @@
             </li>
             <li>
               <figure>
-                <img src="#" alt="Image">
+                <img src="image/10XImage.png" alt="Image">
                 <figcaption>
-                  <span>YOUR PRESENCE</span>
+                  <span>IMAGE 2</span>
                 </figcaption>
               </figure>
             </li>
             <li>
               <figure>
-                <img src="#" alt="Image">
+                <img src="image/10XImage.png" alt="Image">
                 <figcaption>
-                  <span>YOUR PRESENCE</span>
+                  <span>IMAGE 3</span>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="image/10XImage.png" alt="Image">
+                <figcaption>
+                  <span>IMAGE 4</span>
                 </figcaption>
               </figure>
             </li>
           </ul>
           <button class="button-gallery"></button>
+          <button class="button-gallery-hidden"></button>
         </div>
         <ul class="nav-gallery">
           <li class="circle active-circle"><span class="border"></span></li>
