--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h1>SELECTED PROJECTS</h1>
         <ul>
           <li class="end-of-thino">
-            <figure>
+            <figure class="active">
               <img src="image/portfolioImages/vacuumCleaner.png" alt="Vacuum cleaner">
               <figcaption>
                 <h2>End of Thino</h2>
@@ -142,7 +142,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="het-boerenveensche">
@@ -155,7 +155,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="bluerocket">
@@ -168,7 +168,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="harmony-poliform">
@@ -181,7 +181,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="rowenta-studiodry">
@@ -194,7 +194,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li class="fritsch-durisotti">
@@ -207,7 +207,7 @@
                 </span>
               </figcaption>
             </figure>
-            <a href="#" class="active-button hidden-button"></a>
+            <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
         </ul>
