--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <div class="logo-and-contacts">
       <a href="#"><img src="image/tenXLogo.png" alt="Ten-x Logo"></a>
       <div class="contacts">
-        <img src="image/tubeIcon.png" alt="Tube icon">
+        <img src="image/phoneIcon.png" alt="Tube icon">
         <span class="contact-number">+71 88 569 6822</span>
       </div>
     </div>
-    <nav class="navigation">
-      <ul class="nav-block">
+    <nav class="header-navigation">
+      <ul>
         <li><a href="#" class="active">ABOUT</a></li>
         <li><a href="#">PROJECTS</a></li>
         <li><a href="#">BLOG</a></li>
         <li><a href="#">CONTACT</a></li>
       </ul>
-      <ul class="social-networks">
-        <li><a href="#" class="instagram">Instagram</a></li>
-        <li><a href="#" class="facebook">Facebook</a></li>
-        <li><a href="#" class="twitter">Twitter</a></li>
-        <li><a href="#" class="behance">Behance</a></li>
-      </ul>
     </nav>
+    <ul class="social-networks">
+      <li><a href="#" class="instagram">Instagram</a></li>
+      <li><a href="#" class="facebook">Facebook</a></li>
+      <li><a href="#" class="twitter">Twitter</a></li>
+      <li><a href="#" class="behance">Behance</a></li>
+    </ul>
   </header>
   <main>
     <div class="gallery">
@@ -68,13 +68,13 @@
             </li>
           </ul>
           <button class="button-gallery"></button>
-          <button class="button-gallery-hidden"></button>
+          <button class="button-gallery hidden"></button>
         </div>
-        <ul class="nav-gallery">
-          <li class="circle active-circle"><span class="border"></span></li>
-          <li class="circle"><span></span></li>
-          <li class="circle"><span></span></li>
-          <li class="circle"><span></span></li>
+        <ul class="paging">
+          <li class="active"></li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
       </div>
     </div>
@@ -109,24 +109,22 @@
         </article>
       </div>
     </div>
-    <div class="company-offer">
-      <div class="content">
-        <article>
-          <h1>
-            We are bunch of super-skilled<br>guys and gals who love<br>to create websites.
-          </h1>
-          <p>
-            Filema Rodion proposes individual, airtight packages that keep the product's characteristics unchanged for treats for the marriage, baptism and every social event.
-          </p>
-          <a href="#">LEARN MORE</a>
-        </article>
-        <figure>
-          <img src="image/productImageTwo.png" alt="Product image">
-          <figcaption>
-            <time>02<mark>/05</mark></time>
-          </figcaption>
-        </figure>
-      </div>
+    <div class="company-offer content">
+      <article>
+        <h1>
+          We are bunch of super-skilled<br>guys and gals who love<br>to create websites.
+        </h1>
+        <p>
+          Filema Rodion proposes individual, airtight packages that keep the product's characteristics unchanged for treats for the marriage, baptism and every social event.
+        </p>
+        <a href="#">LEARN MORE</a>
+      </article>
+      <figure>
+        <img src="image/productImageTwo.png" alt="Product image">
+        <figcaption>
+          <time>02<mark>/05</mark></time>
+        </figcaption>
+      </figure>
     </div>
     <div class="portfolio">
       <div class="content">
@@ -219,7 +217,7 @@
           <strong>SERVICES WE SPECIALIZE IN</strong>
           <h1>Expert input for maximum growth.</h1>
           <strong class="text-content">DIGITAL / DIGITAL / MARKETING / ECOMMERCE / BRANDING</strong>
-          <a href="#">VIEW PRICING DETAILS</a>
+          <a href="#" class="link">VIEW PRICING DETAILS</a>
         </article>
         <ul class="list-of-services">
           <li>
@@ -244,16 +242,16 @@
             </p>
           </li>
         </ul>
-        <ul class="nav-gallery">
-          <li class="circle active-circle"><span class="border"></span></li>
-          <li class="circle"><span></span></li>
-          <li class="circle"><span></span></li>
-          <li class="circle"><span></span></li>
+        <ul class="paging">
+          <li class="active"></li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
         <div class="contact">
           <span>
-            If you'd like to get in touch,<br> you can send ud an email directly at
-            <address>hello@10x.com</address>
+            If you'd like to get in touch,<br> you can send ud an email directly at<br>
+            <a href="mailto:hello@10x.com" class="email">hello@10x.com</a>
           </span>
         </div>
       </div>
@@ -261,20 +259,20 @@
   </main>
   <footer id="footer" class="content">
     <a href="#" class="logo"><img src="image/tenXLogo.png" alt="Ten-x logo"></a>
-    <nav>
-      <ul class="nav-block">
+    <nav class="footer-navigation">
+      <ul>
         <li><a href="#" class="active">ABOUT</a>/</li>
         <li><a href="#">PROJECTS</a>/</li>
         <li><a href="#">BLOG</a>/</li>
         <li><a href="#">CONTACT</a></li>
       </ul>
-      <ul class="social-networks">
-        <li><a href="#" class="twitter">Twitter</a></li>
-        <li><a href="#" class="instagram">Instagram</a></li>
-        <li><a href="#" class="facebook">Facebook</a></li>
-        <li><a href="#" class="behance">Behance</a></li>
-      </ul>
     </nav>
+    <ul class="social-networks">
+      <li><a href="#" class="twitter">Twitter</a></li>
+      <li><a href="#" class="instagram">Instagram</a></li>
+      <li><a href="#" class="facebook">Facebook</a></li>
+      <li><a href="#" class="behance">Behance</a></li>
+    </ul>
   </footer>
 </body>
 <script src="main.js"></script>
