--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="strategy">
       <div class="content">
         <figure>
-          <img src="image/productImage.png" alt="Product image">
+          <img src="image/productImage01.png" alt="Product image">
           <figcaption>
             <time>01<mark>/05</mark></time>
           </figcaption>
@@ -120,7 +120,7 @@
         <a href="#">LEARN MORE</a>
       </article>
       <figure>
-        <img src="image/productImageTwo.png" alt="Product image">
+        <img src="image/productImage02.png" alt="Product image">
         <figcaption>
           <time>02<mark>/05</mark></time>
         </figcaption>
@@ -131,7 +131,7 @@
         <h1>SELECTED PROJECTS</h1>
         <ul>
           <li class="end-of-thino">
-            <figure class="active">
+            <figure>
               <img src="image/portfolioImages/vacuumCleaner.png" alt="Vacuum cleaner">
               <figcaption>
                 <h2>End of Thino</h2>
