Upgrade index, styles, galleryPlugin

--- a/index.html
+++ b/index.html
@@ -128,81 +128,81 @@
       <div class="content">
         <h1>SELECTED PROJECTS</h1>
         <ul>
-          <li class="end-of-thino">
+          <li>
             <figure>
               <img src="image/portfolioImages/vacuumCleaner.png" alt="Vacuum cleaner">
-              <figcaption>
-                <h2>End of Thino</h2>
-                <span>
-                  When the switch is on, it cuts off the data transmission<br>between the charging device and the source
-                </span>
-              </figcaption>
             </figure>
+            <article>
+              <h2>End of Thino</h2>
+              <span>
+                When the switch is on, it cuts off the data transmission<br>between the charging device and the source
+              </span>
+            </article>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
-          <li class="het-boerenveensche">
+          <li>
             <figure>
               <img src="image/portfolioImages/vacuumCleanerTwo.png" alt="Vacuum cleaner">
-              <figcaption>
-                <h2>Het Boerenveensche</h2>
-                <span>
-                  Thino has a physical switch that activates<br>its turbo-charging feature
-                </span>
-              </figcaption>
             </figure>
+            <article>
+              <h2>Het Boerenveensche</h2>
+              <span>
+                Thino has a physical switch that activates<br>its turbo-charging feature
+              </span>
+            </article>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
-          <li class="bluerocket">
+          <li>
             <figure>
               <img src="image/portfolioImages/flashDrive.png" alt="Flash drive">
-              <figcaption>
-                <h2>Bluerocket</h2>
-                <span>
-                  The World's FIrst VR & AR Phone Case
-                </span>
-              </figcaption>
             </figure>
+            <article>
+              <h2>Bluerocket</h2>
+              <span>
+                The World's FIrst VR & AR Phone Case
+              </span>
+            </article>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
-          <li class="harmony-poliform">
+          <li>
             <figure>
               <img src="image/portfolioImages/tShirt.png" alt="T-shirt">
-              <figcaption>
-                <h2>Harmony / Poliform</h2>
-                <span>
-                  This chair joins chaos and order in a symbiotic<br>relationship, full of expression and rhythm
-                </span>
-              </figcaption>
             </figure>
+            <article>
+              <h2>Harmony / Poliform</h2>
+              <span>
+                This chair joins chaos and order in a symbiotic<br>relationship, full of expression and rhythm
+              </span>
+            </article>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
-          <li class="rowenta-studiodry">
+          <li>
             <figure>
               <img src="image/portfolioImages/dryer.png" alt="Dryer">
-              <figcaption>
-                <h2>Rowenta Studiodry</h2>
-                <span>
-                  Rowenta Studiodry 2nd Generation<br>in 2012
-                </span>
-              </figcaption>
             </figure>
+            <article>
+              <h2>Rowenta Studiodry</h2>
+              <span>
+                Rowenta Studiodry 2nd Generation<br>in 2012
+              </span>
+            </article>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
-          <li class="fritsch-durisotti">
+          <li>
             <figure>
               <img src="image/portfolioImages/electronicBicycle.png" alt="Electronic bicycle">
-              <figcaption>
-                <h2>Fritsch Durisotti</h2>
-                <span>
-                  Spline Spline is a new way of producing wicker<br>furniture that dramatically 
-                </span>
-              </figcaption>
             </figure>
+            <article>
+              <h2>Fritsch Durisotti</h2>
+              <span>
+                Spline Spline is a new way of producing wicker<br>furniture that dramatically 
+              </span>
+            </article>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
