Fix bugs for index and styles

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <img src="image/painting.png" alt="Painting">
       </article>
     </div>
-    <div class="strategy">
+    <div class="strategy description">
       <div class="content">
         <figure>
           <img src="image/productImage01.png" alt="Product image">
@@ -107,7 +107,7 @@
         </article>
       </div>
     </div>
-    <div class="company-offer">
+    <div class="company-offer description">
       <div class="content">
         <article>
           <h1>
@@ -131,80 +131,92 @@
         <h1>SELECTED PROJECTS</h1>
         <ul>
           <li>
-            <figure>
-              <img src="image/portfolioImages/vacuumCleaner.png" alt="Vacuum cleaner">
-            </figure>
-            <article>
-              <h2>End of Thino</h2>
-              <span>
-                When the switch is on, it cuts off the data transmission<br>between the charging device and the source
-              </span>
-            </article>
+            <div>
+              <figure>
+                <img src="image/portfolioImages/vacuumCleaner.png" alt="Vacuum cleaner">
+              </figure>
+              <article>
+                <h2>End of Thino</h2>
+                <span>
+                  When the switch is on, it cuts off the data transmission<br>between the charging device and the source
+                </span>
+              </article>
+            </div>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li>
-            <figure>
-              <img src="image/portfolioImages/vacuumCleanerTwo.png" alt="Vacuum cleaner">
-            </figure>
-            <article>
-              <h2>Het Boerenveensche</h2>
-              <span>
-                Thino has a physical switch that activates<br>its turbo-charging feature
-              </span>
-            </article>
+            <div>
+              <figure>
+                <img src="image/portfolioImages/vacuumCleanerTwo.png" alt="Vacuum cleaner">
+              </figure>
+              <article>
+                <h2>Het Boerenveensche</h2>
+                <span>
+                  Thino has a physical switch that activates<br>its turbo-charging feature
+                </span>
+              </article>
+            </div>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li>
-            <figure>
-              <img src="image/portfolioImages/flashDrive.png" alt="Flash drive">
-            </figure>
-            <article>
-              <h2>Bluerocket</h2>
-              <span>
-                The World's FIrst VR & AR Phone Case
-              </span>
-            </article>
+            <div>
+              <figure>
+                <img src="image/portfolioImages/flashDrive.png" alt="Flash drive">
+              </figure>
+              <article>
+                <h2>Bluerocket</h2>
+                <span>
+                  The World's FIrst VR & AR Phone Case
+                </span>
+              </article>
+            </div>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li>
-            <figure>
-              <img src="image/portfolioImages/tShirt.png" alt="T-shirt">
-            </figure>
-            <article>
-              <h2>Harmony / Poliform</h2>
-              <span>
-                This chair joins chaos and order in a symbiotic<br>relationship, full of expression and rhythm
-              </span>
-            </article>
+            <div>
+              <figure>
+                <img src="image/portfolioImages/tShirt.png" alt="T-shirt">
+              </figure>
+              <article>
+                <h2>Harmony / Poliform</h2>
+                <span>
+                  This chair joins chaos and order in a symbiotic<br>relationship, full of expression and rhythm
+                </span>
+              </article>
+            </div>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li>
-            <figure>
-              <img src="image/portfolioImages/dryer.png" alt="Dryer">
-            </figure>
-            <article>
-              <h2>Rowenta Studiodry</h2>
-              <span>
-                Rowenta Studiodry 2nd Generation<br>in 2012
-              </span>
-            </article>
+            <div>
+              <figure>
+                <img src="image/portfolioImages/dryer.png" alt="Dryer">
+              </figure>
+              <article>
+                <h2>Rowenta Studiodry</h2>
+                <span>
+                  Rowenta Studiodry 2nd Generation<br>in 2012
+                </span>
+              </article>
+            </div>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
           <li>
-            <figure>
-              <img src="image/portfolioImages/electronicBicycle.png" alt="Electronic bicycle">
-            </figure>
-            <article>
-              <h2>Fritsch Durisotti</h2>
-              <span>
-                Spline Spline is a new way of producing wicker<br>furniture that dramatically 
-              </span>
-            </article>
+            <div>
+              <figure>
+                <img src="image/portfolioImages/electronicBicycle.png" alt="Electronic bicycle">
+              </figure>
+              <article>
+                <h2>Fritsch Durisotti</h2>
+                <span>
+                  Spline Spline is a new way of producing wicker<br>furniture that dramatically 
+                </span>
+              </article>
+            </div>
             <a href="#" class="active-button"></a>
             <a href="#" class="button">SHOP NOW</a>
           </li>
@@ -219,35 +231,37 @@
           <strong class="text-content">DIGITAL / DIGITAL / MARKETING / ECOMMERCE / BRANDING</strong>
           <a href="#" class="link">VIEW PRICING DETAILS</a>
         </article>
-        <ul class="list-of-services">
-          <li>
-            <img src="image/agilityImage.png" alt="Agility">
-            <h2>Agility</h2>
-            <p>
-              We believe in a seamless client partnership that<br>connects us into a single unified team. We're not only<br>agile in code but in discovery, and design.
-            </p>
-          </li>
-          <li>
-            <img src="image/teamImage.png" alt="Team">
-            <h2>Team</h2>
-            <p>
-              Our dedicated team model ensures that every project<br>receives the meticulous attention and resource it<br>deserves from our Strategists, Designers, Producers,<br>Engineers, & Filmmakers.
-            </p>
-          </li>
-          <li>
-            <img src="image/collaborationImage.png" alt="Collaboration">
-            <h2>Collaboration</h2>
-            <p>
-              Nothing we do is in isolation. Our process is<br>extremely collaborative, leveraging our clients<br>unique perspectives to activate our own expertise.
-            </p>
-          </li>
-        </ul>
-        <ul class="paging">
-          <li class="active"></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+        <div class="services-gallery">
+          <ul class="list-of-services">
+            <li>
+              <img src="image/agilityImage.png" alt="Agility">
+              <h2>Agility</h2>
+              <p>
+                We believe in a seamless client partnership that<br>connects us into a single unified team. We're not only<br>agile in code but in discovery, and design.
+              </p>
+            </li>
+            <li>
+              <img src="image/teamImage.png" alt="Team">
+              <h2>Team</h2>
+              <p>
+                Our dedicated team model ensures that every project<br>receives the meticulous attention and resource it<br>deserves from our Strategists, Designers, Producers,<br>Engineers, & Filmmakers.
+              </p>
+            </li>
+            <li>
+              <img src="image/collaborationImage.png" alt="Collaboration">
+              <h2>Collaboration</h2>
+              <p>
+                Nothing we do is in isolation. Our process is<br>extremely collaborative, leveraging our clients<br>unique perspectives to activate our own expertise.
+              </p>
+            </li>
+          </ul>
+          <ul class="paging">
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
         <div class="contact">
           <span>
             If you'd like to get in touch,<br> you can send ud an email directly at<br>
